--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.4.0",
     "@supabase/supabase-js": "^2.75.0",
     "bcryptjs": "^3.0.2",
+    "compromise": "^14.14.4",
+    "date-fns-jalali": "^4.1.0-0",
+    "ics": "^3.8.1",
+    "natural": "^8.1.0",
     "next": "15.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-markdown": "^10.1.0",
+    "three": "^0.180.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
