--- a/package.json
+++ b/package.json
@@ -9,19 +9,32 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google-cloud/text-to-speech": "^6.3.1",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.4.0",
+    "@stripe/stripe-js": "^8.1.0",
     "@supabase/supabase-js": "^2.75.0",
+    "@upstash/ratelimit": "^2.0.6",
+    "@upstash/redis": "^1.35.6",
+    "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
+    "canvas": "^3.2.0",
     "compromise": "^14.14.4",
     "date-fns-jalali": "^4.1.0-0",
+    "elevenlabs-node": "^2.0.3",
+    "form-data": "^4.0.4",
+    "formidable": "^3.5.4",
     "ics": "^3.8.1",
     "natural": "^8.1.0",
     "next": "15.5.4",
+    "pdf-lib": "^1.17.1",
+    "pdf.js-extract": "^0.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-markdown": "^10.1.0",
-    "three": "^0.180.0"
+    "stripe": "^19.1.0",
+    "three": "^0.180.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
