--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "NEXT_TELEMETRY_DISABLED=1 next build",
+    "build": "cross-env NODE_OPTIONS=--max-old-space-size=4096 NEXT_TELEMETRY_DISABLED=1 next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -20,6 +20,7 @@
     "bcryptjs": "^3.0.2",
     "canvas": "^3.2.0",
     "compromise": "^14.14.4",
+    "cross-env": "^7.0.3",
     "date-fns-jalali": "^4.1.0-0",
     "elevenlabs-node": "^2.0.3",
     "form-data": "^4.0.4",
