--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google-cloud/text-to-speech": "^6.3.1",
     "@stripe/stripe-js": "^8.1.0",
+    "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.75.0",
     "@upstash/ratelimit": "^2.0.6",
     "@upstash/redis": "^1.35.6",
